@@ -22,7 +22,7 @@ follow the links to the TA-Lib implementation source code. The
 function, and it's input parameters and output values are described in
 its code. You also have a local copy in the
 qtstalker/plugins/indicators/TALIB/ta-lib directory. See the <a
- href="http://cvs.sf.net/viewcvs.py/ta-lib/ta-lib/c/src/ta_func/">complete
+ href="http://svn.sourceforge.net/viewvc/ta-lib/trunk/ta-lib/c/src/ta_func/">complete
 list</a> (which includes the candlestick functions) in the TA-Lib
 source control system. See the explanation of the <a
  href="http://ta-lib.org/d_api/d_api.html#Abstraction%20Layer">Abstraction
